# cvode-wrap

./: .gitlab-ci.yml  CITATION.cff  Cargo.toml  LICENSE.txt  Readme.md
cvode-5-sys/: Cargo.toml  build.rs
cvode-5-sys/src/: cvode.rs  include.h  lib.rs  nvector_serial.rs  sunlinsol_dense.rs  sunmatrix_dense.rs
cvode-wrap/: Cargo.toml
cvode-wrap/src/: c_wrapping.rs  cvode.rs  cvode_sens.rs  lib.rs  nvector.rs
example/: plot.py
example/src/: main.rs
examples/: oscillator_no_sensi.rs  oscillator_sensi.rs
src/: cvode.rs  cvode_sens.rs  lib.rs  nvector.rs
test-solver/: Cargo.toml  plot.py
test-solver/src/: main.rs
