[package]
name = "cvode-wrap"
version = "0.1.0"
authors = ["Arthur Carcano <arthur.carcano@inria.fr>"]
edition = "2018"
license = "BSD-3-Clause"
license-file="LICENSE.txt"
description="A wrapper around cvode and cvodeS from sundials, allowing to solve ordinary differential equations (ODEs) with or without their sensitivities."
repository="https://gitlab.inria.fr/InBio/Public/cvode-rust-wrap/"
readme="Readme.md"
keywords=["sundials","cvode","cvodes","ode","sensitivities"]
categories=["science","simulation","api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sundials-sys = {version="0.2.1", default-features=false, features=["cvodes"]}
array-init = "2.0"