[package]
name = "cvode-wrap"
version = "0.1.0"
authors = ["Arthur Carcano <arthur.carcano@inria.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cvode-5-sys = {path = "../cvode-5-sys"}
sundials-sys = {path = "../../sundials-sys", default-features=false, features=["cvodes"]}
array-init = "2.0"